Cambios Entrega Final

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "proyecto-react-aleajandro-dominguez",
+  "name": "proyecto-react-nahuel",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
